# wolof-corpus-llmops

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  inventaire.txt  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ETAT_AVANCEMENT.md  LLMOPS.md
files(14)/: Colab_ASR_Pipeline_Complete_v2.ipynb  GUIDE_RAPIDE_Pipeline_ASR.txt  whosper_asr_complete_pipeline.py
src/: analyse_youtube_content.py  centralize_ingested.py  clean_youtube_corpus.py  compare_dataset_formats.py  consolidate_wolof_online.py  convert_to_hf_format.py  corpus_stats.py  debug_language_detection.py  excute_error.txt  extract_youtube_videos.py  hf_dataset_upload.py  ingest_hf_datasets.py  merge_corpora.py  merge_with_hf_dataset.py  merge_without_dedup.py  pipeline.yaml  push_unified_to_hf.py  push_wolof_to_hf.py  pyproject.toml  scraper.py  scraper_author.py  scraper_by_category.py  scraper_full_content.py  scraper_new_articles.py  split_corpus.py  split_corpus_to_sentences.py  transcribe_with_whosper.py  transcribe_with_whosper_chunked.py  transcribe_with_whosper_offload.py  transcribe_with_whosper_offload_complete.py  transcribe_youtube_videos.py  validation_n1_filtering.py  validation_n1_wolof_adapted.py
src/pipeline/: __init__.py  config.py  datacard.py  quality_gates.py  run.py
src/tests/: test_datacard.py  test_quality_gates.py
