[project]
name = "wolof-scraper"
version = "0.1.0"
description = "Web scraper for Wolof language data collection"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "fasttext-wheel>=0.9.2",
    "datasketch>=1.6.4",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
