[project]
name = "wolof-scraper"
version = "0.1.0"
description = "Web scraper for Wolof language data collection"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "fastparquet>=2026.3.0",
    "yt-dlp>=2026.3.17",
    "whisper>=1.1.10",
    "torchcodec>=0.13.0",
    "faster-whisper>=1.2.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# E,F = pyflakes/pycodestyle ; I = isort ; UP = pyupgrade ; B = bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # longueur de ligne gérée souplement

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
